# reax

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.rst  TODO  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  requirements.txt
docs/source/: apidoc.rst  conf.py  index.rst
docs/source/api_reference/: modules.rst  reax.data.rst  reax.demos.rst  reax.lightning.rst  reax.listeners.progress.rst  reax.listeners.rst  reax.loggers.rst  reax.metrics.jm.rst  reax.metrics.rst  reax.rst  reax.stages.rst  reax.strategies.rst  reax.training.rst  reax.utils.rst
docs/source/starting/: introduction.ipynb
examples/: autoencoder.py
src/reax/: __init__.py  _engine.py  _evaluation.py  _module_hooks.py  exceptions.py  hooks.py  keys.py  modules.py  optimizers.py  plugins.py  random.py  rank_zero.py  results.py  saving.py  stages.py  testing.py  training.py  types.py  typing.py
src/reax/data/: __init__.py  _datasource_manager.py  _datasources.py  _loaders.py  _types.py  collate.py  data_loaders.py  data_modules.py  dataloaders.py  datamodules.py  datasets.py  fetchers.py  samplers.py  utils.py
src/reax/demos/: __init__.py  boring_classes.py  mnist.py
src/reax/lightning/: rank_zero.py
src/reax/listeners/: __init__.py  checkpointer.py  early_stopping.py  model_checkpoint.py  progress.py  utils.py
src/reax/listeners/progress/: __init__.py  progress_bar.py  rich_progress.py  tqdm_progress.py
src/reax/loggers/: __init__.py  _utils.py  csv_logs.py  logger.py  mlflow.py  pandas.py  tensorboard.py
src/reax/metrics/: __init__.py  _classification.py  _globals.py  _metric.py  _registry.py  aggregation.py  collections.py  evaluation.py  metric.py  regression.py  utils.py
src/reax/metrics/jm/: types.py  utils.py
src/reax/stages/: __init__.py  common.py  fit.py  predict.py  stages.py  stats.py  test.py  train.py  validation.py
src/reax/strategies/: __init__.py  _factory.py  _jax.py  _parallel.py  _single_device.py  _strategies.py  _utils.py
src/reax/training/: __init__.py  _checkpoint_connector.py  _checkpointing.py  _deprecated.py  _logger_connector.py  trainer.py
src/reax/utils/: __init__.py  arrays.py  containers.py  events.py  grads.py  rngs.py
test/: conftest.py  test_data.py  test_engine.py  test_metrics.py  test_saving.py
test/core/: todo_test_module.py
test/data/: test_samplers.py
test/helpers/: __init__.py  datasets.py  simple_models.py
test/listeners/: test_early_stopping.py  test_listener_hook_outputs.py  test_listeners.py
test/listeners/progress/: test_rich_progress_bar.py
test/loggers/: conftest.py  test_csv.py  test_logger.py  test_mlflow.py  test_pandas.py  test_tensorboard.py
test/models/: test_hooks.py
test/strategies/: basic_train.py  test_jax_strategy.py
test/trainig/: test_trainer.py
test/training/: test_dataloaders.py  test_trainer.py
